Course section of cards show poor responsiveness when width is 578-750px. Text lines become very short and difficult to read, view course button jump out of card container.Fixed with bootstrap layout grid.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,22 +234,28 @@ div.desktop-wrapper iframe {
     padding: 20px;
 }
 
+
 .coursecard h5 {
     color: #d4af37;
     text-align: center;
+    
 }
 
 .coursecard p {
     color: rgba(100, 100, 100, 0.938);
     text-align: justify;
+    
 }
 
 .coursecard {
     transition: all 0.5s;
+    margin:15px;
 }
 
 .coursecard:hover {
     transform: scale(1.05);
+    backface-visibility: hidden;
+    
 }
 
 
